--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
   "name": "same",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "http-server . -o",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "lint": "eslint --ext .js .; exit 0"
   },
   "repository": "https://github.com/amneacsu/same",
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel": "^6.3.26",
-    "babel-core": "^6.4.0",
-    "babel-eslint": "^5.0.0",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
     "eslint": "^2.3.0",
-    "http-server": "^0.8.5",
-    "webpack": "^1.12.11"
+    "http-server": "^0.8.5"
   }
 }
